Bug 398022 - Dolphin doesn't save settings
Summary: Dolphin doesn't save settings
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.08.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-29 14:55 UTC by apache
Modified: 2018-09-18 13:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description apache 2018-08-29 14:55:20 UTC
Plasma 5 doesn't save settings on Manjaro, Plasma 5.13.4 qt 5.11.1
Framework 5.48.0
4.14.65-1-MANJARO #1 SMP PREEMPT Sat Aug 18 13:29:56 UTC 2018 x86_64 GNU/Linux

When I set Dolphin Preferences > General > Confirmations and thick the Executing scripts I can run .desktop file (run application) from different Dolphin locations but option in Dolphin remains unmarked.

I suspect that Plasma 5 has general problem with saving some settings, because there other bugs reports for different elements of Plasma not saving settings.

Not all, because some settings are respected and some are not. 

I report them separately. 
https://bugs.kde.org/show_bug.cgi?id=398008

Manjaro, Plasma 5.13.4 qt 5.11.1
Framework 5.48.0
4.14.65-1-MANJARO #1 SMP PREEMPT Sat Aug 18 13:29:56 UTC 2018 x86_64 GNU/Linux
Comment 1 David Edmundson 2018-08-29 15:17:30 UTC
Was a dolphin bug. Patch on review.
Comment 2 David Edmundson 2018-09-04 12:20:50 UTC
Git commit 5f252da8b58e03b623e56f788ff6d1056269c005 by David Edmundson.
Committed on 04/09/2018 at 12:20.
Pushed by davidedmundson into branch 'Applications/18.08'.

Correctly save behaviourOnLaunch

Summary:
We only wrote out a checkbox value if the checkbox was checked.
Unchecking it would not do anything.

Test Plan:
Read KRun's exepcted values
Unchecked config option
Reloaded dolphin
Checkbox remained off

Reviewers: #dolphin, ngraham, elvisangelaccio

Reviewed By: #dolphin, ngraham, elvisangelaccio

Subscribers: ngraham, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D15147

M  +4    -3    src/settings/general/confirmationssettingspage.cpp

https://commits.kde.org/dolphin/5f252da8b58e03b623e56f788ff6d1056269c005
Comment 3 Nate Graham 2018-09-18 13:32:09 UTC
*** Bug 371837 has been marked as a duplicate of this bug. ***